@@ -1,6 +1,7 @@
 
 7.18  2017-01-11
   - Fixed support for relative %INC paths in Mojo::Home.
+  - Fixed a bug in Mojo::URL where invalid fragment strings could be generated.
 
 7.17  2017-01-11
   - Fixed Windows bugs in Mojo::File. (kmx)
